// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftNavigation shows LeftNavigation with default props 1`] = `
.c0 {
  padding-top: 20px;
  height: 100%;
  width: undefined;
  position: fixed;
  color: white;
  background-color: Black;
  top: 0;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: -webkit-transform 0.1s cubic-bezier(0,.7,.9,1);
  -webkit-transition: transform 0.1s cubic-bezier(0,.7,.9,1);
  transition: transform 0.1s cubic-bezier(0,.7,.9,1);
}

.c1 {
  padding: 1.5rem 1.5rem;
  color: #51575D;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-leftnavigation"
  >
    <div
      class=" c1"
    />
  </div>
</div>
`;

exports[`LeftNavigation shows LeftNavigation with footer props 1`] = `
.c0 {
  padding-top: 20px;
  height: 100%;
  width: undefined;
  position: fixed;
  color: white;
  background-color: Black;
  top: 0;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: -webkit-transform 0.1s cubic-bezier(0,.7,.9,1);
  -webkit-transition: transform 0.1s cubic-bezier(0,.7,.9,1);
  transition: transform 0.1s cubic-bezier(0,.7,.9,1);
}

.c1 {
  padding: 1.5rem 1.5rem;
  color: #51575D;
}

.c2 {
  padding: 10rem 1.5rem;
  color: #D5D5D5;
  border-radius: 0rem 0rem 0.25rem 0.25rem;
}

<div>
  <div
    class=" c0"
  >
    <div
      class=" c1"
    />
    <div
      class=" c2"
      data-test-id="foundry-leftnavigation"
    >
      testing footer
    </div>
  </div>
</div>
`;

exports[`LeftNavigation shows LeftNavigation with header props 1`] = `
.c0 {
  padding-top: 20px;
  height: 100%;
  width: undefined;
  position: fixed;
  color: white;
  background-color: Black;
  top: 0;
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: -webkit-transform 0.1s cubic-bezier(0,.7,.9,1);
  -webkit-transition: transform 0.1s cubic-bezier(0,.7,.9,1);
  transition: transform 0.1s cubic-bezier(0,.7,.9,1);
}

.c1 {
  padding: 1.5rem 1.5rem 0rem border-radius:0.25rem 0.25rem 0rem 0rem;
  font-weight: bold;
  color: #252D34;
}

.c2 {
  padding: 1.5rem 1.5rem;
  color: #51575D;
}

<div>
  <div
    class=" c0"
  >
    <div
      class=" c1"
      data-test-id="foundry-leftnavigation"
    >
      testing header
    </div>
    <div
      class=" c2"
    />
  </div>
</div>
`;
